--- a/shield/po/pt_BR/untangle-node-shield.po
+++ b/shield/po/pt_BR/untangle-node-shield.po
@@ -2,7 +2,6 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
@@ -15,6 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Translate Toolkit 1.1.1\n"
 "X-Poedit-Language: Portuguese\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:20
@@ -39,8 +39,14 @@ msgid "Note"
 msgstr "Nota"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:47
-msgid "Attack Blocker is a heuristic based intrusion prevention and requires no configuration. Users can modify the treatment of certain IP and/or networks on the exception tab."
-msgstr "O Attack Blocker (Bloqueador de ataque) é uma prevenção da invasão baseada em heurística e não requer qualquer configuração. Os usuários podem modificar o tratamento de certos IP e/ou redes na guia de exceções."
+msgid ""
+"Attack Blocker is a heuristic based intrusion prevention and requires no "
+"configuration. Users can modify the treatment of certain IP and/or networks "
+"on the exception tab."
+msgstr ""
+"O Attack Blocker (Bloqueador de ataque) é uma prevenção da invasão baseada "
+"em heurística e não requer qualquer configuração. Os usuários podem "
+"modificar o tratamento de certos IP e/ou redes na guia de exceções."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:55
 msgid "enable"
@@ -130,4 +136,3 @@ msgstr "Aguarde"
 #: ../impl/com/untangle/node/shield/LogIteration.java:194
 msgid "type"
 msgstr "tipo"
-
