--- a/webfilter-base/po/es/untangle-base-webfilter.po
+++ b/webfilter-base/po/es/untangle-base-webfilter.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-02 14:20-0800\n"
-"PO-Revision-Date: 2008-11-25 06:04-0700\n"
-"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"PO-Revision-Date: 2009-02-06 06:24-0800\n"
+"Last-Translator: Juan Machado <juan@itos.uga.edu>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Spanish\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:33
@@ -182,9 +182,8 @@ msgid "File Type"
 msgstr "Tipo de archivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:576
-#, fuzzy
 msgid "[no mime type]"
-msgstr "[sin sitio]"
+msgstr "[ sin tipo MIME]"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:599
 msgid "MIME type"
@@ -201,9 +200,8 @@ msgstr "Listas permitidas"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:670
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:731
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:855
-#, fuzzy
 msgid "Client IP addresses"
-msgstr "Direcciones IP"
+msgstr "Direcciones del cliente IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:748
 msgid "\"URL\" specified cannot be passed because it uses secure http (https)"
@@ -394,3 +392,6 @@ msgstr "Desbloquear por ahora"
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:63
 msgid "Unblock Permanently"
 msgstr "Desbloquear permanentemente"
+
+#~ msgid "IP addresses"
+#~ msgstr "Direcciones IP"
