--- a/mail-casing/po/es/untangle-casing-mail.po
+++ b/mail-casing/po/es/untangle-casing-mail.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-04 13:57-0800\n"
-"PO-Revision-Date: 2008-11-22 06:23-0700\n"
-"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"PO-Revision-Date: 2009-02-06 06:31-0800\n"
+"Last-Translator: Juan Machado <juan@itos.uga.edu>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Spanish\n"
 
 #: ../servlets/quarantine/root/quarantine.js:194
@@ -119,6 +119,8 @@ msgstr "No hay mensajes para mostrar"
 #: ../servlets/quarantine/root/quarantine.js:648
 msgid "The messages below were quarantined and will be deleted after {0} days."
 msgstr ""
+"Los mensajes de abajo fueron puestos en cuarentena y serán borrados depués "
+"de {0}  días. "
 
 #: ../servlets/quarantine/root/quarantine.js:653
 msgid "Quarantined Messages"
@@ -223,14 +225,13 @@ msgid "Successfully sent digest to '{0}'"
 msgstr ""
 
 #: ../servlets/quarantine/root/request.js:88
-#, fuzzy
 msgid "A quarantine does not exist for '{0}'"
-msgstr "Resumen de cuarentena para: {0}"
+msgstr ""
 
 #: ../servlets/quarantine/root/request.js:92
 #, fuzzy
 msgid "Quarantine Request"
-msgstr "Resumen de cuarentena para: {0}"
+msgstr "Resumen de cuarentena"
 
 #: ../servlets/quarantine/root/safelist.js:59
 msgid "Add"
@@ -261,25 +262,25 @@ msgid "Delete one Address"
 msgstr "Eliminar una dirección"
 
 #: ../impl/com/untangle/node/mail/impl/quarantine/Quarantine.java:747
-#, fuzzy
 msgid "Quarantine Digest"
-msgstr "Resumen de cuarentena para: {0}"
+msgstr "Resumen de cuarentena"
 
 #: ../impl/resources/com/untangle/node/mail/impl/quarantine/DigestSimpleEmail_HTML.vm:20
 #: ../impl/resources/com/untangle/node/mail/impl/quarantine/DigestSimpleEmail_HTML.vm:25
-#, fuzzy
 msgid "Quarantine Digest for {0}"
-msgstr "Resumen de cuarentena para: {0}"
+msgstr "Resumen de cuarentena para {0}"
 
 #: ../impl/resources/com/untangle/node/mail/impl/quarantine/DigestSimpleEmail_HTML.vm:27
 msgid "Click here to access your spam quarantine."
-msgstr ""
+msgstr "Presione aquí para accesar su cuarentena de spam."
 
 #: ../impl/resources/com/untangle/node/mail/impl/quarantine/DigestSimpleEmail_HTML.vm:28
 msgid ""
 "From this link you can have a specific email delivered to your email account "
 "or delete an email from the quarantine."
 msgstr ""
+"Desde este enlace, usted puede obtener un email específico enviado a su "
+"cuenta de email o borrar un email de la cuarentena."
 
 #: ../servlets/quarantine/root/inbox.jspx:34
 msgid "Quarantine Digest for: {0}"
@@ -297,9 +298,5 @@ msgstr "Solicitar email de resumen de cuarentena"
 msgid "{0} | Request Quarantine Digest Email"
 msgstr "{0} | Solicitar email de resumen de cuarentena"
 
-#~ msgid ""
-#~ "Your Remote Access Portal login has been configured without an email "
-#~ "address or with an incorrect email address."
-#~ msgstr ""
-#~ "Su portal de acceso remoto fue configurado sin una dirección de email o "
-#~ "con una dirección de email incorrecta."
+#~ msgid "Your Remote Access Portal login has been configured without an email address or with an incorrect email address."
+#~ msgstr "Su portal de acceso remoto fue configurado sin una dirección de email o con una dirección de email incorrecta."
