--- a/uvm-lib/po/es/untangle-libuvm.po
+++ b/uvm-lib/po/es/untangle-libuvm.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-04 13:57-0800\n"
-"PO-Revision-Date: 2008-11-25 06:20-0700\n"
-"Last-Translator: David Russi <dprussi@qwest.net>\n"
+"PO-Revision-Date: 2009-02-10 08:56-0800\n"
+"Last-Translator: Juan Machado <juan@itos.uga.edu>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Spanish\n"
 
 #: ../servlets/webui/root/script/main.js:57
@@ -82,7 +82,7 @@ msgstr ""
 
 #: ../servlets/webui/root/script/main.js:87
 msgid "Skin Out of Date"
-msgstr ""
+msgstr "Piel desactualizada"
 
 #: ../servlets/webui/root/script/main.js:89
 #: ../servlets/webui/root/script/components.js:2017
@@ -371,9 +371,8 @@ msgid "Error making rpc request to server"
 msgstr "Error al efectuar la solicitud de RPC al servidor."
 
 #: ../servlets/webui/root/script/components.js:130
-#, fuzzy
 msgid "Service busy or timed out."
-msgstr "tiempo de espera de la solicitud agotado"
+msgstr "Servicio ocupado o no contesta. "
 
 #: ../servlets/webui/root/script/components.js:229
 msgid "TODO"
@@ -393,7 +392,7 @@ msgstr "Interna"
 
 #: ../servlets/webui/root/script/components.js:244
 msgid "DMZ"
-msgstr ""
+msgstr "DMZ"
 
 #: ../servlets/webui/root/script/components.js:245
 msgid "VPN"
@@ -576,13 +575,11 @@ msgstr ""
 msgid ""
 "The <B>Power Button</B> allows you to turn a product \"on\" and \"off\"."
 msgstr ""
-"El <B>botón de encendido</B> permite \"activar\" y \"desactivar\" un  "
-"producto."
+"El <B>botón de encendido</B> permite \"activar\" y \"desactivar\" un  producto."
 
 #: ../servlets/webui/root/script/components.js:1425
-#, fuzzy
 msgid "System Busy"
-msgstr "Sistema"
+msgstr ""
 
 #: ../servlets/webui/root/script/components.js:1499
 msgid "Error downloading package {0}. Install Aborted."
@@ -635,7 +632,8 @@ msgstr "Tiempo de espera de actualización agotado"
 msgid ""
 "Downloading {0}. <br/>Status: {1} KB/{2} KB downloaded. <br/>Speed: {3}."
 msgstr ""
-"Descargando {0}. <br/>Estado: {1} KB/{2} KB descargados. <br/>Velocidad: {3}."
+"Descargando {0}. <br/>Estado: {1} KB/{2} KB descargados. <br/>Velocidad: "
+"{3}."
 
 #: ../servlets/webui/root/script/components.js:1571
 msgid "<br/>Package {0}/{1}."
@@ -782,32 +780,28 @@ msgid "Data write:"
 msgstr "Escritura de datos:"
 
 #: ../servlets/webui/root/script/components.js:1772
-#, fuzzy
 msgid "Day"
-msgstr "Cualquiera"
+msgstr "Día"
 
 #: ../servlets/webui/root/script/components.js:1772
 msgid "Days"
-msgstr ""
+msgstr "Días"
 
 #: ../servlets/webui/root/script/components.js:1772
-#, fuzzy
 msgid "Hour"
-msgstr "Router"
+msgstr "Hora"
 
 #: ../servlets/webui/root/script/components.js:1772
-#, fuzzy
 msgid "Hours"
-msgstr "Host"
+msgstr "Horas"
 
 #: ../servlets/webui/root/script/components.js:1772
-#, fuzzy
 msgid "Minute"
-msgstr "impresora"
+msgstr "Minuto"
 
 #: ../servlets/webui/root/script/components.js:1772
 msgid "Minutes"
-msgstr ""
+msgstr "Minutos"
 
 #: ../servlets/webui/root/script/components.js:1827
 msgid "activity"
@@ -859,14 +853,14 @@ msgstr "Actualizando..."
 
 #: ../servlets/webui/root/script/components.js:2189
 #: ../servlets/webui/root/script/components.js:2193
-#, fuzzy
 msgid "Auto Refresh"
-msgstr "Actualizar"
+msgstr "Refrescado automático"
 
 #: ../servlets/webui/root/script/components.js:2448
 #: ../servlets/webui/root/script/components.js:2466
 msgid "There are unsaved settings which will be lost. Do you want to continue?"
 msgstr ""
+"Hay configuraciones no grabadas que se van a perder. Quiere continuar?  "
 
 #: ../servlets/webui/root/script/components.js:2572
 #: ../servlets/webui/root/script/config/policyManager.js:20
@@ -1213,14 +1207,13 @@ msgstr "Nombre"
 
 #: ../servlets/setup/root/script/setup.js:391
 #: ../servlets/webui/root/script/config/systemInfo.js:154
-#, fuzzy
 msgid "Organization Name"
-msgstr "Organización"
+msgstr "Unidad Organizacional"
 
 #: ../servlets/setup/root/script/setup.js:392
 #: ../servlets/webui/root/script/config/systemInfo.js:157
 msgid "(if applicable)"
-msgstr ""
+msgstr "(si aplica) "
 
 #: ../servlets/setup/root/script/setup.js:398
 #: ../servlets/webui/root/script/config/systemInfo.js:167
@@ -1715,8 +1708,7 @@ msgstr "Sólo lectura"
 #: ../servlets/webui/root/script/config/administration.js:367
 #: ../servlets/webui/root/script/config/administration.js:386
 msgid "The password is shorter than the minimum {0} characters."
-msgstr ""
-"La contraseña contiene menos caracteres que el mínimo requerido de {0}."
+msgstr "La contraseña contiene menos caracteres que el mínimo requerido de {0}."
 
 #: ../servlets/webui/root/script/config/administration.js:399
 msgid "External Administration"
@@ -1794,6 +1786,8 @@ msgid ""
 "{0}The current hostname is not a qualified hostname, click {1}here{2} to fix "
 "it{3}"
 msgstr ""
+"{0}El nombre de host actual no es un nombre calificado, presione {1}aquí{2} "
+"para arreglarlo{3}"
 
 #: ../servlets/webui/root/script/config/administration.js:604
 msgid "Public Address"
@@ -2030,13 +2024,14 @@ msgstr ""
 "certificados (Verisign, Thawte, etc.)."
 
 #: ../servlets/webui/root/script/config/administration.js:1176
-#, fuzzy
 msgid ""
 "When your Certificate Authority (Verisign, Thawte, etc.) has sent your "
 "Signed Certificate, copy and paste it below (Control-V) then press the "
 "Proceed button."
 msgstr ""
-"haya enviado el certificado firmado, cópielo y péguelo abajo (Control-V), "
+"Cuando su Autoridad de Certificación (Verisign, Thawte, etc) le envíe su "
+"Certificado Firmado, copie y peguelo abajo (Control-V) y presione el botón "
+"SEGUIR."
 
 #: ../servlets/webui/root/script/config/administration.js:1188
 msgid ""
@@ -2044,6 +2039,8 @@ msgid ""
 "Intermediate Certificate, paste it below. Otherwise, do not paste anything "
 "below."
 msgstr ""
+"Si su Autoridad de Certificación (Verisign, Thawte, etc) también le envió un "
+"Certificado Intermedio, péguelo abajo. Si no es así, no pegue nada abajo. "
 
 #: ../servlets/webui/root/script/config/administration.js:1223
 msgid "Monitoring"
@@ -2384,6 +2381,8 @@ msgid ""
 "Upload Logo Failed. The logo must be the correct dimensions and in GIF, PNG, "
 "or JPG format."
 msgstr ""
+"Carga del logo falló. El logo debe tener las dimensiones correctas y en "
+"formato GIF, PNG, o JPG."
 
 #: ../servlets/webui/root/script/config/administration.js:1953
 msgid "The login name: \"{0}\" in row: {1}  already exists."
@@ -2723,20 +2722,18 @@ msgstr "Robo de identidad"
 
 #: ../servlets/webui/root/script/config/email.js:1124
 msgid "A \"Password\" must be specified if a \"Login\" is specified."
-msgstr ""
-"Debe especificar una \"Contraseña\" si especifica un \"Inicio de sesión\"."
+msgstr "Debe especificar una \"Contraseña\" si especifica un \"Inicio de sesión\"."
 
 #: ../servlets/webui/root/script/config/email.js:1133
 msgid "A \"Login\" must be specified if a \"Password\" is specified."
-msgstr ""
-"Debe especificar un \"Inicio de sesión\" si especifica una \"Contraseña\"."
+msgstr "Debe especificar un \"Inicio de sesión\" si especifica una \"Contraseña\"."
 
 #: ../servlets/webui/root/script/config/email.js:1144
 msgid ""
 "A \"Hostname\" must be specified if \"Login\" or \"Password\" are specified."
 msgstr ""
-"Debe especificar un \"Nombre del host\" si especifica un \"Inicio de sesión"
-"\" o una \"Contraseña\"."
+"Debe especificar un \"Nombre del host\" si especifica un \"Inicio de sesión\" o "
+"una \"Contraseña\"."
 
 #: ../servlets/webui/root/script/config/email.js:1155
 msgid "A \"From Address\" must be specified."
@@ -3575,9 +3572,8 @@ msgid "IMAP timeout should be between 0 and 86400!"
 msgstr "El tiempo de espera de IMAP debe ser entre 0 y 86400."
 
 #: ../servlets/webui/root/script/config/upgrade.js:49
-#, fuzzy
 msgid "Upgrade in progress."
-msgstr "Hora de actualización"
+msgstr "Actualización en progreso."
 
 #: ../servlets/webui/root/script/config/upgrade.js:78
 #: ../servlets/webui/root/script/config/upgrade.js:85
@@ -3681,7 +3677,7 @@ msgstr "tiempo de espera de la solicitud agotado"
 
 #: ../localapi/com/untangle/uvm/util/OutsideValve.java:113
 msgid "Off-site administration is disabled."
-msgstr ""
+msgstr "Administración External está deshabilitada."
 
 #: ../localapi/com/untangle/uvm/util/OutsideValve.java:120
 msgid "standard access"
@@ -3802,9 +3798,9 @@ msgid "Error"
 msgstr "Error"
 
 #: ../impl/com/untangle/uvm/engine/MailSenderImpl.java:681
-#, fuzzy, java-format
+#, java-format
 msgid "{0} Server Test Message"
-msgstr "Servidor {0}"
+msgstr "{0} Mensaje de Prueba de Servidor"
 
 #: ../impl/com/untangle/uvm/engine/MailSenderImpl.java:684
 #, java-format
@@ -3812,6 +3808,8 @@ msgid ""
 "This automated message was generated by the {0} Server{1}to confirm that "
 "your email settings are correct."
 msgstr ""
+"Este mensaje automatizado fué generado por el servidor  {0} para confirmar "
+"que la configuración de email es correcta. "
 
 #: ../api/com/untangle/uvm/BrandingBaseSettings.java:100
 msgid "your network administrator"
@@ -4004,24 +4002,38 @@ msgstr "ELIMINAR"
 msgid "Passed by policy"
 msgstr "Permitidas p/directiva"
 
+#, fuzzy
 msgid "decimal_sep"
-msgstr ","
-
-msgid "thousand_sep"
 msgstr "."
 
-msgid "date_fmt"
-msgstr "d/m/Y"
-
-msgid "timestamp_fmt"
-msgstr "Y-m-d G:i:s"
+#, fuzzy
+msgid "thousand_sep"
+msgstr ","
 
 #, fuzzy
-#~ msgid "timestamp"
-#~ msgstr "Y-m-d g:i:s a"
+msgid "date_fmt"
+msgstr "m/d/y"
+
+#, fuzzy
+msgid "timestamp_fmt"
+msgstr "Y-m-d g:i:s a"
+
+#~ msgid ""
+#~ "The currently configured skin is not marked as compatible with the current "
+#~ "version of this software. The Default skin is now being used. <a href="
+#~ "\"http://wiki.untangle.com/index.php/Skins\" target=\"_blank\">Click here "
+#~ "for more information."
+#~ msgstr ""
+#~ "La Piel actualmente configurada no está marcada como compatible con la "
+#~ "version actual de este programa. La piel por defecto está siendo usada "
+#~ "ahora. <a href=\"http://wiki.untangle.com/index.php/Skins\" target=\"_blank\"> "
+#~ "Presione aquí para más información. "
 
 #~ msgid "When your Certificate Authority (Verisign, Thawte, etc.) "
 #~ msgstr "Una vez que  la autoridad de certificados (Verisign, Thawte, etc.) "
+
+#~ msgid "has sent your Signed Certificate, copy and paste it below (Control-V), "
+#~ msgstr "haya enviado el certificado firmado, cópielo y péguelo abajo (Control-V), "
 
 #~ msgid "then press the Proceed button."
 #~ msgstr "y después haga clic en el botón Adelante."
@@ -4041,28 +4053,6 @@ msgstr "Y-m-d G:i:s"
 #~ msgid "off-site access"
 #~ msgstr "acceso desde fuera del sitio"
 
-#~ msgid "The value in this field is invalid"
-#~ msgstr "El valor de este campo no es válido."
-
-#~ msgid "This field is required"
-#~ msgstr "Este campo es obligatorio."
-
-#~ msgid "Advanced Email Configuration."
-#~ msgstr "Configuración avanzada de email"
-
-#~ msgid ""
-#~ "You are about to manually reboot.  This will interrupt normal network "
-#~ "operations<br>"
-#~ msgstr ""
-#~ "Está a punto de rearrancar el sistema. Esto interrumpirá las operaciones "
-#~ "normales de la red<br>"
-
-#~ msgid "until the Untangle Server is finished automatically restarting.<br>"
-#~ msgstr ""
-#~ "hasta que el servidor Untangle termine de rearrancar automáticamente.<br>"
-
-#~ msgid "This may take up to several minutes to complete."
-#~ msgstr "Este proceso puede tardar hasta varios minutos."
-
-#~ msgid "Unknown"
-#~ msgstr "Desconocido"
+#, fuzzy
+#~ msgid "timestamp"
+#~ msgstr "Y-m-d g:i:s a"
