--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 For developer build: rake
 For Debian packages: debuild -us -uc
-For more information: http://wiki.untangle.com/index.php/Building_the_Code
+For more information: http://wiki.untangle.com/index.php/Developer_Wiki
 
